name:                peli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/peli#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable peli
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Prelude, Assets, Aritmetiikka
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=tabs
    -fprint-explicit-foralls
  extensions: BangPatterns
              EmptyCase
              FlexibleContexts
              FlexibleInstances
              TupleSections
              OverloadedStrings
              ScopedTypeVariables
              DeriveFunctor
              DeriveFoldable
              DeriveTraversable
              InstanceSigs
              DerivingVia
              NoMonomorphismRestriction  
  build-depends:       base-noprelude >= 4.7 && < 5, relude, pretty-simple, gloss, tuple
